--- a/index.html
+++ b/index.html
@@ -6,6 +6,50 @@
 
   <link rel="stylesheet" href="style.css">
 
+  <canvas id="myCanvas" width="240" height="297" style="border:1px solid #d3d3d3;">
+</canvas>
+
+<script
+			  src="https://code.jquery.com/jquery-3.3.1.js"
+			  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+			  crossorigin="anonymous"></script>
+<script>
+
+window.onload = function() {
+    var Albatros_x = 10;
+    var Albatros_y = 10;
+    var c = document.getElementById("myCanvas");
+    var ctx = c.getContext("2d");
+    var img = new Image();
+    img.src = 'img/albatros.jpg';
+    function drawBall() {
+      ctx.clearRect(Albatros_x-1,Albatros_y-1,12,12.5);
+      ctx.drawImage(img, Albatros_x, Albatros_y,10 ,10);
+    }
+    setInterval(drawBall, 50);// affichage toutes les 50ms
+    $(document).keydown(
+    function (evt) {
+      if (evt.keyCode == 39) {
+        Albatros_x = Albatros_x+1;
+        ctx.drawImage(img, 20, 20,10 ,10);// efface un rectangle/*right*/
+      }
+      else if (evt.keyCode == 37) {
+        Albatros_x = Albatros_x-1;
+      }
+      else if (evt.keyCode == 38) {
+        Albatros_y = Albatros_y+1;
+        ctx.drawImage(img, 20, 20,10 ,10)
+      }
+      else if (evt.keyCode == 40) {
+        Albatros_y = Albatros_y-1;
+      }
+    }
+    );
+
+}
+
+</script>
+
 </head>
 
 <body>
