--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
 </head>
 
 <body>
+  <h1>Albatros.io</h1>
+  <p><i>"Souvent, pour s'amuser, les hommes d'équipage<br>
+    Prennent des Albatros, vastes oiseaux des mers<br>
+    Qui suivent, indolents, compagnons de voyage<br>
+    Les navires glissants sur les gouffres amers"
+  </i></p>
+
 </body>
 </html>
